# CppNumpyInterface

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: c_to_numpy_types.h  cpi_iterator.hpp  cpi_ndarray.hpp  cpi_tuple.hpp  cpi_types.hpp  ndarray.h  tuple.h
src/utils/: boolean.h  convert.h  cpi_assert.hpp  cpi_bool.hpp  cpi_convert.hpp  cpi_string.hpp  string.h  x_assert.h
test/: CMakeLists.txt  test_shape.py
